# vst-vac-6v

./: CMakeLists.txt  README.md  build-prod.bat  build-prod.sh  dev-install.sh.in  fetch_jamba.cmake  jamba.cmake  test-dev.sh.in
.github/workflows/: run-tests-macos-action.yml  run-tests-windows-action.yml
Design/: Background.pxm  Button_Live_4frames.pxm  Button_small_2frames.pxm  zoom.groovy
archive/: README-macOS_64bits.txt  README-win_64bits.txt
audio-unit/: audiounitconfig.h
mac/: Info.plist
resource/: VAC6.uidesc  VAC6V.rc
src/cpp/: AudioBuffer.h  AudioUtils.h  CircularBuffer.h  CircularFIFO.h  Clock.h  Concurrent.h  Messaging.h  Parameter.h  Utils.h  VAC6AudioChannelProcessor.cpp  VAC6AudioChannelProcessor.h  VAC6CIDs.h  VAC6Constants.h  VAC6Controller.cpp  VAC6Controller.h  VAC6Model.cpp  VAC6Model.h  VAC6Plugin.cpp  VAC6Plugin.h  VAC6Processor.cpp  VAC6Processor.h  VAC6Utils.h  VAC6VST2.cpp  VAC6VST3.cpp  ZoomWindow.cpp  ZoomWindow.h  version.h.in
src/cpp/controller/: ControlManager.cpp  ControlManager.h  CustomDisplayView.cpp  CustomDisplayView.h  CustomView.cpp  CustomView.h  CustomViewCreator.h  CustomViewFactory.h  DrawContext.cpp  DrawContext.h  GainView.cpp  GainView.h  HistoryView.cpp  HistoryView.h  LCDDisplayView.cpp  LCDDisplayView.h  LCDScrollbarView.cpp  LCDScrollbarView.h  MaxLevelView.cpp  MaxLevelView.h  MomentaryButton.cpp  MomentaryButton.h  ToggleButtonView.cpp  ToggleButtonView.h  VAC6Controller.cpp  VAC6Controller.h  VAC6Views.cpp  VAC6Views.h  VSTParameters.cpp  VSTParameters.h  VSTView.h  VSTViewState.h
test/cpp/: test-CircularBuffer.cpp  test-ZoomWindow.cpp  test-concurrent.cpp
vst-common/: VST3_SDK.cmake  gtest-download.cmake.in  vst-common.cmake
vst-common/src/cpp/pongasoft/Utils/: Misc.h
vst-common/src/cpp/pongasoft/Utils/Collection/: CircularBuffer.h
vst-common/src/cpp/pongasoft/Utils/Concurrent/: Concurrent.h
vst-common/src/cpp/pongasoft/VST/: AudioBuffer.h  AudioUtils.h  Clock.h  ParamConverters.h  ParamDef.h  Parameter.h  Parameters.cpp  Parameters.h  Plugin.cpp  Plugin.h
vst-common/src/cpp/pongasoft/VST/Common/: Plugin.cpp  Plugin.h
vst-common/src/cpp/pongasoft/VST/Common/Concurrent/: Concurrent.h
vst-common/src/cpp/pongasoft/VST/GUI/: GUIController.cpp  GUIViewState.h
vst-common/src/cpp/pongasoft/VST/GUI/Params/: GUIParamCxAware.h  GUIParamCxMgr.cpp  GUIParamCxMgr.h  GUIParameter.h  GUIParameters.cpp  GUIParameters.h  GUIRawParameter.cpp  GUIRawParameter.h  HostParameters.h
vst-common/src/cpp/pongasoft/VST/GUI/Views/: CustomView.cpp  CustomView.h  CustomViewCreator.h  CustomViewFactory.h  MomentaryButton.cpp  MomentaryButton.h  ToggleButtonView.h
vst-common/src/cpp/pongasoft/VST/RT/: RTParameter.h  RTProcessor.cpp  RTProcessor.h  RTState.cpp  RTState.h
vst-common/src/cpp/pongasoft/logging/: logging.h
vst-common/test/cpp/pongasoft/VST/Common/: test-concurrent.cpp
